fix: fix the logo overlaps in mobile view. (#9)

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -3,8 +3,8 @@
 // Floating back to top button
 #back-to-top {
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 20px;
+  right: 20px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -20,6 +20,15 @@
   z-index: 1000;
   text-decoration: none;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+
+  // Mobile-specific positioning
+  @media (max-width: 49.99rem) {
+    bottom: 15px;
+    right: 15px;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+  }
 
   &:hover {
     background-color: #1E3765;
